[project]
name = "temporal-activity-cache"
dynamic = ["version"]
description = "Content-addressed activity memoization with shared remote storage for Temporal"
authors = [{ name = "Saeed Seyfi", email = "me@saeedseyfi.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
keywords = ["temporal", "workflow", "cache", "memoization", "fsspec"]
dependencies = [
    "temporalio>=1.0.0",
    "fsspec>=2024.1.0",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.5.0",
    "pyright>=1.1",
]

[project.urls]
Homepage = "https://github.com/saeedseyfi/temporal-activity-cache"
Repository = "https://github.com/saeedseyfi/temporal-activity-cache"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/temporal_activity_cache"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
